tests/tables/fails/parser/unexpected_tokens3.tbl
# CHECK: fails/parser/unexpected_tokens3.tbl(4,11): error: Expected <Identifier>, got import
# CHECK: table foo(import) = []
# CHECK:           ^~~~~~
table foo(import) = []
